Add Cyber Security module with configuration examples and capabilities for QR code security, shoulder surfing detection, and physical access monitoring.